11/12/2013 21:18 Mise en place de l'action GO pour lancer le jeux / modif sur fenetre

--- a/src/Tama/menu.form
+++ b/src/Tama/menu.form
@@ -54,8 +54,8 @@
         <Container class="javax.swing.JPanel" name="PanelHome">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="tab5">
-                <Property name="tabTitle" type="java.lang.String" value="tab5"/>
+              <JTabbedPaneConstraints tabName="HOME">
+                <Property name="tabTitle" type="java.lang.String" value="HOME"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -79,6 +79,7 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
+                      <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="PanelEtat" max="32767" attributes="0"/>
                           <Component id="PanelStats" pref="0" max="32767" attributes="0"/>
@@ -278,19 +279,14 @@
                           <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="LabelPV" min="-2" max="-2" attributes="0"/>
-                              <Component id="BarPV" min="-2" max="-2" attributes="0"/>
+                              <Component id="BarPV" min="-2" pref="17" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <Component id="LabelMP" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="1" attributes="0">
-                                  <Component id="BarMP" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                              </Group>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="LabelMP" max="32767" attributes="0"/>
+                              <Component id="BarMP" max="32767" attributes="0"/>
                           </Group>
+                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Component id="BarEXP" min="-2" max="-2" attributes="0"/>
                               <Component id="LabelEXP" min="-2" max="-2" attributes="0"/>
